tests/fixtures/invalid/bytes_rshift_bytes.py
# Cannot right shift Bytes and Bytes
x: bytes = b"hello" >> b"hello"
